# Code style
[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Never enforce `E501` (line length violations).
ignore = ["E501"]
select = ["C", "E", "F", "I", "W", "CPY"]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
preview = true

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["lighteval"]

[tool.ruff.format]
quote-style = "double" # Like Black, use double quotes for strings.
indent-style = "space" # Like Black, indent with spaces, rather than tabs.
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas.
line-ending = "auto" # Like Black, automatically detect the appropriate line ending.

# Building package
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "mole"
version = "0.1.0"
description = "Mixture of Lora Experts"
authors = [
  { name = "Adithya S K", email = "adithyaskolavi@gmail.com" }
]
license = { file = "LICENSE" }  # or whichever license file you have
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",  # Change the license classifier as needed
    "Operating System :: OS Independent",
]
keywords = ["evaluation", "nlp", "llm"]
dependencies = [
    # Base dependencies
    "transformers>=4.38.0",
    "huggingface_hub>=0.22.0",
    "torch>=2.0",
    "GitPython>=3.1.41", # for logging
    "datasets>=2.14.0",
    # Prettiness
    "termcolor==2.3.0",
    "pytablewriter",
    "colorama",
    # Extension of metrics
    "aenum==3.1.15",
    # Base metrics
    "nltk==3.8.1",
    "scikit-learn",
    "spacy==3.7.2",
    "sacrebleu",
    "rouge_score==0.1.2",
    "sentencepiece>=0.1.99",
    "protobuf==3.20.*", # pinned for sentencepiece compat
    "pycountry",
]


[project.optional-dependencies]
adapters = ["peft==0.3.0"]
quality = ["ruff==v0.2.2", "pre-commit"]
tests = ["pytest==7.4.0"]
dev = ["mole[adapters,quality,tests]"]
# [tool.poetry.dependencies]
# python = "^3.10"


#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
